--- a/servicio.html
+++ b/servicio.html
@@ -56,46 +56,101 @@
             <div class="container-card">
                 <!-- CARD 1 -->
                 <article class="sect-card">
-                    <figure class="sect-img">
-                        <img src="img/about-us.jpg" alt="">
-                    </figure>
+                    <div class="sect-icon">
+                        <i class="ri-shield-check-line"></i>
+                    </div>
                     <div class="sect-inf">
-                        <h3>Servicios <span><br>de limpieza</span></h3>
-                        <p>Comprende la limpieza <br> integral de ambientes</p>
-                        <button>Ver Servicios</button>
+                        <h3>Seguridad<br>Vial</h3>
                     </div>
                 </article>
                 <!-- CARD 2 -->
                 <article class="sect-card">
-                    <figure class="sect-img">
-                        <img src="img/about-us.jpg" alt="">
-                    </figure>
+                    <div class="sect-icon">
+                        <i class="ri-signpost-line"></i>
+                    </div>
                     <div class="sect-inf">
-                        <h3>Saneamiento <span><br>ambiental</span></h3>
-                        <p>Eliminamos todo tipo<br>de insectos</p>
-                        <button>Ver Servicios</button>
+                        <h3>Señalización<br>Vertical</h3>
                     </div>
                 </article>
                 <!-- CARD 3 -->
                 <article class="sect-card">
-                    <figure class="sect-img">
-                        <img src="img/about-us.jpg" alt="">
-                    </figure>
+                    <div class="sect-icon">
+                        <i class="ri-arrow-up-down-fill"></i>
+                    </div>
                     <div class="sect-inf">
-                        <h3>Servicios <span><br>generales</span></h3>
-                        <p>Controlamos el deterioro<br>de las instalaciones</p>
-                        <button>Ver Servicios</button>
+                        <h3>Señalización<br>Horizontal</h3>
                     </div>
                 </article>
                 <!-- CARD 4 -->
                 <article class="sect-card">
-                    <figure class="sect-img">
-                        <img src="img/about-us.jpg" alt="">
-                    </figure>
+                    <div class="sect-icon">
+                        <i class='bx bx-align-middle'></i>
+                    </div>
                     <div class="sect-inf">
-                        <h3>Servicios <span><br>complementarios</span></h3>
-                        <p>Mejoramos la gestión<br>operativa de procesos</p>
-                        <button>Ver Servicios</button>
+                        <h3>Barreras<br>de Seguridad</h3>
+                    </div>
+                </article>
+                <!-- CARD 5 -->
+                <article class="sect-card">
+                    <div class="sect-icon">
+                        <i class="ri-skip-forward-line"></i>
+                    </div>
+                    <div class="sect-inf">
+                        <h3>Amortiguadores<br>de impacto</h3>
+                    </div>
+                </article>
+                <!-- CARD 6 -->
+                <article class="sect-card">
+                    <div class="sect-icon">
+                        <i class="ri-ram-2-line"></i>
+                    </div>
+                    <div class="sect-inf">
+                        <h3>Terminales<br>atenuadores</h3>
+                    </div>
+                </article>
+                <!-- CARD 7 -->
+                <article class="sect-card">
+                    <div class="sect-icon">
+                        <i class="ri-settings-5-fill"></i>
+                    </div>
+                    <div class="sect-inf">
+                        <h3>Amortiguadores<br>sobre Camión</h3>
+                    </div>
+                </article>
+                <!-- CARD 8 -->
+                <article class="sect-card">
+                    <div class="sect-icon">
+                        <i class="ri-checkbox-circle-line"></i>
+                    </div>
+                    <div class="sect-inf">
+                        <h3>Sellos de<br>alta fricción</h3>
+                    </div>
+                </article>
+                <!-- CARD 9 -->
+                <article class="sect-card">
+                    <div class="sect-icon">
+                        <i class="ri-loader-2-fill"></i>
+                    </div>
+                    <div class="sect-inf">
+                        <h3>ITS</h3>
+                    </div>
+                </article>
+                <!-- CARD 10 -->
+                <article class="sect-card">
+                    <div class="sect-icon">
+                        <i class="ri-pulse-line"></i>
+                    </div>
+                    <div class="sect-inf">
+                        <h3>Medición de Niveles<br>de Servicio</h3>
+                    </div>
+                </article>
+                <!-- CARD 11 -->
+                <article class="sect-card">
+                    <div class="sect-icon">
+                        <i class="ri-truck-line"></i>
+                    </div>
+                    <div class="sect-inf">
+                        <h3>Alquiler de Vehículos<br>de contección</h3>
                     </div>
                 </article>
             </div>
@@ -115,9 +170,9 @@
                     </div>
                     <h3 style="margin-top: 15px">Redes Sociales</h3>
                     <div class="social-links">
-                        <a href="#" title="LinkedIn"><i class='bx bxl-linkedin' ></i></a>
                         <a href="#" title="Instagram"><i class='bx bxl-instagram-alt' ></i></a>
                         <a href="#" title="Facebook"><i class='bx bxl-facebook' ></i></a>
+                        <a href="#" title="Tiktok"><i class="ri-tiktok-fill"></i></a>
                     </div>
                 </div>
                 <div class="footer-section">
@@ -126,26 +181,26 @@
                     <a href="#nosotros">Nosotros</a>
                     <a href="#contacto">Contacto</a>
                     <a href="#servicios">Servicios</a>
-                    <a href="#galeria">Galería</a>
                 </div>
                 <div class="footer-section">
                     <h3>Contacto</h3>
                     <p>Calle. Nevado Sara Sara Nro. 115, San Miguel - Lima</p>
                     <div class="contact-info">
-                        <span><i class='bx bxs-phone'></i>+51 949197827</span>
+                        <span><i class='bx bxs-phone'></i>+51 922776631</span>
                     </div>
                     <div class="contact-info">
-                        <span><i class='bx bxs-envelope' ></i> comercial@ecotechperu.com</span>
+                        <span><i class='bx bxs-phone'></i>01 621-7996</span>
+                    </div>
+                    <div class="contact-info">
+                        <span><i class='bx bxs-envelope' ></i>comercialecotechperu@gmail.com</span>
+                    </div>
+                    <div class="contact-info">
+                        <span><i class='bx bxs-envelope' ></i>comercial2ecotechperu@gmail.com</span>
+                    </div>
+                    <div class="contact-info">
+                        <span><i class='bx bxs-envelope' ></i>operacionesecotecperu@gmail.com</span>
                     </div>
                 </div>                  
-                <div class="footer-section form-inbox">
-                    <h3>Suscríbete Ahora</h3>
-                    <p>Explora los últimos avances</p>
-                    <form class="newsletter-form">
-                        <input type="email" placeholder="Ingrese su correo electrónico" required>
-                        <button type="submit">Entregar <i class='bx bx-send' ></i></button>
-                    </form>
-                </div>
             </div>
         </div>
         <div class="copyright">
@@ -157,10 +212,12 @@
     </footer>
     <!-- ============== SCROLL UP ============== -->
 
-    <iv class="content__buttons">
-        <div class="button__floating button__floating-wsp">
-            <img class="icono-whatsapp" src="img/whatsapps.webp" alt="">
-        </div>
+    <div class="content__buttons">
+        <a href="https://wa.me/51922776631?text=Hola%2C%20deseo%20más%20información" target="_blank" rel="noopener noreferrer">
+            <div class="button__floating button__floating-wsp">
+                <img class="icono-whatsapp" src="img/whatsapps.webp" alt="">
+            </div>
+        </a>
     </div>
 
     <!--=============== SWIPER JS ===============-->
