--- a/contacto.html
+++ b/contacto.html
@@ -78,9 +78,9 @@
                     </div>
                     <h3 style="margin-top: 15px">Redes Sociales</h3>
                     <div class="social-links">
-                        <a href="#" title="LinkedIn"><i class='bx bxl-linkedin' ></i></a>
-                        <a href="#" title="Instagram"><i class='bx bxl-instagram-alt' ></i></a>
-                        <a href="#" title="Facebook"><i class='bx bxl-facebook' ></i></a>
+                        <a href="https://www.instagram.com/ecotechfumigaciones?igsh=bDRnMXdmaHNib3d2" title="Instagram"><i class='bx bxl-instagram-alt' ></i></a>
+                        <a href="https://www.facebook.com/share/17VEhwxiuB/" title="Facebook"><i class='bx bxl-facebook' ></i></a>
+                        <a href="http://tiktok.com/@fumigacion.gasfiteria" title="Tiktok"><i class="ri-tiktok-fill"></i></a>
                     </div>
                 </div>
                 <div class="footer-section">
@@ -89,26 +89,26 @@
                     <a href="#nosotros">Nosotros</a>
                     <a href="#contacto">Contacto</a>
                     <a href="#servicios">Servicios</a>
-                    <a href="#galeria">Galería</a>
                 </div>
                 <div class="footer-section">
                     <h3>Contacto</h3>
                     <p>Calle. Nevado Sara Sara Nro. 115, San Miguel - Lima</p>
                     <div class="contact-info">
-                        <span><i class='bx bxs-phone'></i>+51 949197827</span>
+                        <span><i class='bx bxs-phone'></i>+51 922776631</span>
                     </div>
                     <div class="contact-info">
-                        <span><i class='bx bxs-envelope' ></i> comercial@ecotechperu.com</span>
+                        <span><i class='bx bxs-phone'></i>01 621-7996</span>
                     </div>
-                </div>                  
-                <div class="footer-section form-inbox">
-                    <h3>Suscríbete Ahora</h3>
-                    <p>Explora los últimos avances</p>
-                    <form class="newsletter-form">
-                        <input type="email" placeholder="Ingrese su correo electrónico" required>
-                        <button type="submit">Entregar <i class='bx bx-send' ></i></button>
-                    </form>
-                </div>
+                    <div class="contact-info">
+                        <span><i class='bx bxs-envelope' ></i>comercialecotechperu@gmail.com</span>
+                    </div>
+                    <div class="contact-info">
+                        <span><i class='bx bxs-envelope' ></i>comercial2ecotechperu@gmail.com</span>
+                    </div>
+                    <div class="contact-info">
+                        <span><i class='bx bxs-envelope' ></i>operacionesecotecperu@gmail.com</span>
+                    </div>
+                </div>                 
             </div>
         </div>
         <div class="copyright">
@@ -120,10 +120,12 @@
     </footer>
     <!-- ============== SCROLL UP ============== -->
 
-    <iv class="content__buttons">
-        <div class="button__floating button__floating-wsp">
-            <img class="icono-whatsapp" src="img/whatsapps.webp" alt="">
-        </div>
+    <div class="content__buttons">
+        <a href="https://wa.me/51922776631?text=Hola%2C%20deseo%20más%20información" target="_blank" rel="noopener noreferrer">
+            <div class="button__floating button__floating-wsp">
+                <img class="icono-whatsapp" src="img/whatsapps.webp" alt="">
+            </div>
+        </a>
     </div>
 
     <!--=============== SWIPER JS ===============-->
