--- a/nosotros.html
+++ b/nosotros.html
@@ -54,18 +54,19 @@
                 <img src="img/about-us.jpg" alt="Personal de limpieza con traje" />
             </figure>
             <div class="about-us-content cl-about">
-                <h1>Empresa de Limpieza y Saneamiento Ambiental</h1>
+                <h1>ECOTECH Limpieza Fumigación y Servicios</h1>
                 <p>
-                    Ecotechservices es una empresa líder en saneamiento ambiental
-                    y gestión integral de instalaciones que brinda servicios a
-                    empresas ligadas a la industria petrolera, minera, energía,
-                    construcción, administrativas, bancarias, agroindustria e
-                    industrias alimentarias brindando a todas estas servicios y
-                    productos de excelente calidad.
-                    Estamos presente a NIVEL NACIONAL. Todo esto sumado a su
-                    gran equipo humano capacitado y comprometido nos ha
-                    permitido atender las necesidades de todos nuestros clientes a
-                    lo largo y ancho del territorio nacional.
+                ECOTECH SERVICES S.A.C somos una empresa que realiza trabajos 
+                de saneamiento ambiental como desinsectación, desinfección, desratización, 
+                limpieza de reservorios de agua, limpieza de fachadas en altura y limpieza de 
+                ambientes en general; buscando siempre la satisfacción de nuestros clientes a 
+                través del cumplimiento de sus requisitos y aplicando una efectiva gestión de 
+                calidad, seguridad y respeto al medio ambiente.
+                <br><br>
+                ECOTECH, está conformada por un equipo multidisciplinario, de ingenieros, biólogos 
+                y técnicos capacitados específicamente en el rubro en el que nos desarrollamos, con 
+                amplia experiencia en cada una de las actividades que realizamos, el cual nos ha 
+                permitido el respaldo y confianza de nuestros grupos de interés.
                 </p>
                 <p>
                     Un equipo humano comprometido garantiza soluciones rápidas, seguras y con calidad.
@@ -147,9 +148,9 @@
                     </div>
                     <h3 style="margin-top: 15px">Redes Sociales</h3>
                     <div class="social-links">
-                        <a href="#" title="LinkedIn"><i class='bx bxl-linkedin' ></i></a>
                         <a href="#" title="Instagram"><i class='bx bxl-instagram-alt' ></i></a>
                         <a href="#" title="Facebook"><i class='bx bxl-facebook' ></i></a>
+                        <a href="#" title="Tiktok"><i class="ri-tiktok-fill"></i></a>
                     </div>
                 </div>
                 <div class="footer-section">
@@ -158,26 +159,26 @@
                     <a href="#nosotros">Nosotros</a>
                     <a href="#contacto">Contacto</a>
                     <a href="#servicios">Servicios</a>
-                    <a href="#galeria">Galería</a>
                 </div>
                 <div class="footer-section">
                     <h3>Contacto</h3>
                     <p>Calle. Nevado Sara Sara Nro. 115, San Miguel - Lima</p>
                     <div class="contact-info">
-                        <span><i class='bx bxs-phone'></i>+51 949197827</span>
+                        <span><i class='bx bxs-phone'></i>+51 922776631</span>
                     </div>
                     <div class="contact-info">
-                        <span><i class='bx bxs-envelope' ></i> comercial@ecotechperu.com</span>
+                        <span><i class='bx bxs-phone'></i>01 621-7996</span>
                     </div>
-                </div>                  
-                <div class="footer-section form-inbox">
-                    <h3>Suscríbete Ahora</h3>
-                    <p>Explora los últimos avances</p>
-                    <form class="newsletter-form">
-                        <input type="email" placeholder="Ingrese su correo electrónico" required>
-                        <button type="submit">Entregar <i class='bx bx-send' ></i></button>
-                    </form>
-                </div>
+                    <div class="contact-info">
+                        <span><i class='bx bxs-envelope' ></i>comercialecotechperu@gmail.com</span>
+                    </div>
+                    <div class="contact-info">
+                        <span><i class='bx bxs-envelope' ></i>comercial2ecotechperu@gmail.com</span>
+                    </div>
+                    <div class="contact-info">
+                        <span><i class='bx bxs-envelope' ></i>operacionesecotecperu@gmail.com</span>
+                    </div>
+                </div>                 
             </div>
         </div>
         <div class="copyright">
@@ -189,10 +190,12 @@
     </footer>
     <!-- ============== SCROLL UP ============== -->
 
-    <iv class="content__buttons">
-        <div class="button__floating button__floating-wsp">
-            <img class="icono-whatsapp" src="img/whatsapps.webp" alt="">
-        </div>
+    <div class="content__buttons">
+        <a href="https://wa.me/51922776631?text=Hola%2C%20deseo%20más%20información" target="_blank" rel="noopener noreferrer">
+            <div class="button__floating button__floating-wsp">
+                <img class="icono-whatsapp" src="img/whatsapps.webp" alt="">
+            </div>
+        </a>
     </div>
 
     <!--=============== SWIPER JS ===============-->
