--- a/contacto.html
+++ b/contacto.html
@@ -17,7 +17,7 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="#home" class="nav__logo">
-                <img src="img/logo.png" alt="image" />
+                <img src="img/Logo-Ecotech.png" alt="image" />
             </a>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
@@ -126,6 +126,11 @@
                 <img class="icono-whatsapp" src="img/whatsapps.webp" alt="">
             </div>
         </a>
+        <div class="scroll-up-anmt">
+            <a href="#" class="scrollup" id="scroll-up">
+                <i class="ri-arrow-up-s-line"></i>
+            </a>
+        </div>
     </div>
 
     <!--=============== SWIPER JS ===============-->
