--- a/servicio.html
+++ b/servicio.html
@@ -6,6 +6,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
     <title>Servicio - EcoTechServices</title>
+    
     <!-- ============== REMIXICON ============== -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css" rel="stylesheet" />
 
@@ -17,7 +18,7 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="#home" class="nav__logo">
-                <img src="img/logo.png" alt="image" />
+                <img src="img/Logo-Ecotech.png" alt="image" />
             </a>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
@@ -53,9 +54,9 @@
             <div class="title-heading">
                 <h2 class="mb-48 fs-title">Servicios que puedes contratar en una empresa de Limpieza</h2>
             </div>
-            <div class="container-card">
+            <div class="container-cards">
                 <!-- CARD 1 -->
-                <article class="sect-card">
+                <article class="sect-cards">
                     <div class="sect-icon">
                         <i class="ri-shield-check-line"></i>
                     </div>
@@ -64,7 +65,7 @@
                     </div>
                 </article>
                 <!-- CARD 2 -->
-                <article class="sect-card">
+                <article class="sect-cards">
                     <div class="sect-icon">
                         <i class="ri-signpost-line"></i>
                     </div>
@@ -73,7 +74,7 @@
                     </div>
                 </article>
                 <!-- CARD 3 -->
-                <article class="sect-card">
+                <article class="sect-cards">
                     <div class="sect-icon">
                         <i class="ri-arrow-up-down-fill"></i>
                     </div>
@@ -82,7 +83,7 @@
                     </div>
                 </article>
                 <!-- CARD 4 -->
-                <article class="sect-card">
+                <article class="sect-cards">
                     <div class="sect-icon">
                         <i class='bx bx-align-middle'></i>
                     </div>
@@ -91,7 +92,7 @@
                     </div>
                 </article>
                 <!-- CARD 5 -->
-                <article class="sect-card">
+                <article class="sect-cards">
                     <div class="sect-icon">
                         <i class="ri-skip-forward-line"></i>
                     </div>
@@ -100,7 +101,7 @@
                     </div>
                 </article>
                 <!-- CARD 6 -->
-                <article class="sect-card">
+                <article class="sect-cards">
                     <div class="sect-icon">
                         <i class="ri-ram-2-line"></i>
                     </div>
@@ -109,7 +110,7 @@
                     </div>
                 </article>
                 <!-- CARD 7 -->
-                <article class="sect-card">
+                <article class="sect-cards">
                     <div class="sect-icon">
                         <i class="ri-settings-5-fill"></i>
                     </div>
@@ -118,7 +119,7 @@
                     </div>
                 </article>
                 <!-- CARD 8 -->
-                <article class="sect-card">
+                <article class="sect-cards">
                     <div class="sect-icon">
                         <i class="ri-checkbox-circle-line"></i>
                     </div>
@@ -127,7 +128,7 @@
                     </div>
                 </article>
                 <!-- CARD 9 -->
-                <article class="sect-card">
+                <article class="sect-cards">
                     <div class="sect-icon">
                         <i class="ri-loader-2-fill"></i>
                     </div>
@@ -136,7 +137,7 @@
                     </div>
                 </article>
                 <!-- CARD 10 -->
-                <article class="sect-card">
+                <article class="sect-cards">
                     <div class="sect-icon">
                         <i class="ri-pulse-line"></i>
                     </div>
@@ -145,7 +146,7 @@
                     </div>
                 </article>
                 <!-- CARD 11 -->
-                <article class="sect-card">
+                <article class="sect-cards">
                     <div class="sect-icon">
                         <i class="ri-truck-line"></i>
                     </div>
@@ -218,6 +219,11 @@
                 <img class="icono-whatsapp" src="img/whatsapps.webp" alt="">
             </div>
         </a>
+        <div class="scroll-up-anmt">
+            <a href="#" class="scrollup" id="scroll-up">
+                <i class="ri-arrow-up-s-line"></i>
+            </a>
+        </div>
     </div>
 
     <!--=============== SWIPER JS ===============-->
