--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="#home" class="nav__logo">
-                <img src="img/logo.png" alt="image" />
+                <img src="img/Logo-Ecotech.png" alt="image" />
             </a>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
@@ -52,7 +52,7 @@
             <img src="img/banner-1.png" alt="Control de plagas" class="banner-img">
             <div class="banner-content">
                 <h2 class="banner-title">
-                <span>SANEAMIENTO <br></span> <strong>AMBIENTAL</strong>
+                <span>LIMPIEZA DE <br></span> <strong>LUNAS Y FACHADAS</strong>
                 </h2>
             </div>
         </article>
@@ -219,9 +219,9 @@
             <div class="title-heading">
                 <h2 class="mb-48 fs-title">Nuestros Servicios</h2>
             </div>
-            <div class="container-card">
+            <div class="container-cards">
                 <!-- CARD 1 -->
-                <article class="sect-card">
+                <article class="sect-cards">
                     <div class="sect-icon">
                         <i class="ri-shield-check-line"></i>
                     </div>
@@ -230,7 +230,7 @@
                     </div>
                 </article>
                 <!-- CARD 2 -->
-                <article class="sect-card">
+                <article class="sect-cards">
                     <div class="sect-icon">
                         <i class="ri-signpost-line"></i>
                     </div>
@@ -239,7 +239,7 @@
                     </div>
                 </article>
                 <!-- CARD 3 -->
-                <article class="sect-card">
+                <article class="sect-cards">
                     <div class="sect-icon">
                         <i class="ri-arrow-up-down-fill"></i>
                     </div>
@@ -248,7 +248,7 @@
                     </div>
                 </article>
                 <!-- CARD 4 -->
-                <article class="sect-card">
+                <article class="sect-cards">
                     <div class="sect-icon">
                         <i class='bx bx-align-middle'></i>
                     </div>
@@ -257,7 +257,7 @@
                     </div>
                 </article>
                 <!-- CARD 5 -->
-                <article class="sect-card">
+                <article class="sect-cards">
                     <div class="sect-icon">
                         <i class="ri-skip-forward-line"></i>
                     </div>
@@ -266,7 +266,7 @@
                     </div>
                 </article>
                 <!-- CARD 6 -->
-                <article class="sect-card">
+                <article class="sect-cards">
                     <div class="sect-icon">
                         <i class="ri-ram-2-line"></i>
                     </div>
@@ -275,7 +275,7 @@
                     </div>
                 </article>
                 <!-- CARD 7 -->
-                <article class="sect-card">
+                <article class="sect-cards">
                     <div class="sect-icon">
                         <i class="ri-settings-5-fill"></i>
                     </div>
@@ -284,7 +284,7 @@
                     </div>
                 </article>
                 <!-- CARD 8 -->
-                <article class="sect-card">
+                <article class="sect-cards">
                     <div class="sect-icon">
                         <i class="ri-checkbox-circle-line"></i>
                     </div>
@@ -293,7 +293,7 @@
                     </div>
                 </article>
                 <!-- CARD 9 -->
-                <article class="sect-card">
+                <article class="sect-cards">
                     <div class="sect-icon">
                         <i class="ri-loader-2-fill"></i>
                     </div>
@@ -302,7 +302,7 @@
                     </div>
                 </article>
                 <!-- CARD 10 -->
-                <article class="sect-card">
+                <article class="sect-cards">
                     <div class="sect-icon">
                         <i class="ri-pulse-line"></i>
                     </div>
@@ -311,7 +311,7 @@
                     </div>
                 </article>
                 <!-- CARD 11 -->
-                <article class="sect-card">
+                <article class="sect-cards">
                     <div class="sect-icon">
                         <i class="ri-truck-line"></i>
                     </div>
