Avance de banners

--- a/index.html
+++ b/index.html
@@ -52,23 +52,39 @@
             <img src="img/banner-1.png" alt="Control de plagas" class="banner-img">
             <div class="banner-content">
                 <h2 class="banner-title">
-                <span>LIMPIEZA DE <br></span> <strong>LUNAS Y FACHADAS</strong>
+                <span>LIMPIEZA DE LUNAS<br></span><strong>Y FACHADAS</strong>
                 </h2>
             </div>
         </article>
         <article class="banner-slide">
-            <img src="img/banner-clean.png" alt="Control de plagas" class="banner-img">
+            <img src="img/banner-2.png" alt="Control de plagas" class="banner-img">
             <div class="banner-content">
                 <h2 class="banner-title">
-                <span>SERVICIOS DE<br></span> <strong>LIMPIEZA</strong>
+                <span>MANTENIMIENTO DE<br></span> <strong>INSTALACIONES</strong><br>SANITARIAS
                 </h2>
             </div>
         </article>
         <article class="banner-slide">
-            <img src="img/banner-cleanwindow.png" alt="Desinfección profesional" class="banner-img">
+            <img src="img/banner-3.png" alt="Desinfección profesional" class="banner-img">
             <div class="banner-content">
                 <h2 class="banner-title">
-                <span>LIMPIEZA EN<br></span> <strong>ALTURA</strong>
+                <span>MANTENIMIENTO DE<br></span> <strong>LUCES DE</strong><br>EMERGENCIA
+                </h2>
+            </div>
+        </article>
+        <article class="banner-slide">
+            <img src="img/banner-4.png" alt="Desinfección profesional" class="banner-img">
+            <div class="banner-content">
+                <h2 class="banner-title">
+                <span>ALQUILER Y VENTAS<br></span> <strong>DE EQUIPOS</strong><br>DE FUMIGACIÓN
+                </h2>
+            </div>
+        </article>
+        <article class="banner-slide">
+            <img src="img/banner-5.png" alt="Desinfección profesional" class="banner-img">
+            <div class="banner-content">
+                <h2 class="banner-title">
+                <span>EMPRESA<br></span> <strong>CERTIFICADA</strong>
                 </h2>
             </div>
         </article>
