--- a/index.html
+++ b/index.html
@@ -55,12 +55,21 @@
                 <span>LIMPIEZA DE LUNAS<br></span><strong>Y FACHADAS</strong>
                 </h2>
             </div>
+            <div class="hero-contact">
+                <div class="title-hero">
+                    <i class='bx bx-phone-call' ></i>
+                </div>
+                <div class="inf-hero">
+                    <p>Distribuidor y Proyectos</p>
+                    <p>929-421-056</p>
+                </div>
+            </div>
         </article>
         <article class="banner-slide">
             <img src="img/banner-2.png" alt="Control de plagas" class="banner-img">
             <div class="banner-content">
                 <h2 class="banner-title">
-                <span>MANTENIMIENTO DE<br></span> <strong>INSTALACIONES</strong><br>SANITARIAS
+                <span>GASFITERÍA<br></span> <strong>PROFESIONAL</strong><br>EXPERTA
                 </h2>
             </div>
         </article>
@@ -73,18 +82,18 @@
             </div>
         </article>
         <article class="banner-slide">
-            <img src="img/banner-4.png" alt="Desinfección profesional" class="banner-img">
+            <img src="img/banner-6.jpg" alt="Desinfección profesional" class="banner-img">
             <div class="banner-content">
                 <h2 class="banner-title">
-                <span>ALQUILER Y VENTAS<br></span> <strong>DE EQUIPOS</strong><br>DE FUMIGACIÓN
+                <span>SERVICIO DE<br></span> <strong>FUMIGACIÓN</strong>
                 </h2>
             </div>
         </article>
         <article class="banner-slide">
-            <img src="img/banner-5.png" alt="Desinfección profesional" class="banner-img">
+            <img src="img/banner-4.png" alt="Desinfección profesional" class="banner-img">
             <div class="banner-content">
                 <h2 class="banner-title">
-                <span>EMPRESA<br></span> <strong>CERTIFICADA</strong>
+                <span>ALQUILER Y VENTAS<br></span> <strong>DE EQUIPOS</strong><br>DE FUMIGACIÓN
                 </h2>
             </div>
         </article>
@@ -672,9 +681,6 @@
                 <div class="footer-section">
                     <h2>EcoTechServices</h2>
                     <p>Soluciones en saneamiento ambiental con responsabilidad y confianza.</p>
-                    <div class="contact-info">
-                        <span><i class='bx bxs-phone'></i>+51 929421056</span>
-                    </div>
                     <h3 style="margin-top: 15px">Redes Sociales</h3>
                     <div class="social-links">
                         <a href="#" title="Instagram"><i class='bx bxl-instagram-alt' ></i></a>
@@ -693,7 +699,7 @@
                     <h3>Contacto</h3>
                     <p>Calle. Nevado Sara Sara Nro. 115, San Miguel - Lima</p>
                     <div class="contact-info">
-                        <span><i class='bx bxs-phone'></i>+51 922776631</span>
+                        <span><i class='bx bxs-phone'></i>+51 922776631 / +51 929421056</span>
                     </div>
                     <div class="contact-info">
                         <span><i class='bx bxs-phone'></i>01 621-7996</span>
